# MApper-Software

./: .gitignore  .gitleaks.toml  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYRIGHT  DESKTOP.md  INSTALL.md  LICENSE  NOTICE  PUBLIC_RELEASE_CHECKLIST.md  README.md  SECURITY.md  SHARING.md  THIRD_PARTY_LICENSES.md  llms.txt  setup.bat  setup.sh  start.sh
mapper-backend/: desktop_entry.py  mapper-desktop.spec  pyproject.toml  requirements.txt
mapper-backend/mapper/: __init__.py  main.py
mapper-backend/tests/: roundtrip_evolution.py  test_aesa_carrying_capacity_template.py  test_aesa_chain.py  test_aesa_co2e_basis.py  test_aesa_co2e_factors.py  test_aesa_data_provenance.py  test_aesa_engine.py  test_aesa_method_mapping.py  test_aesa_per_principle_sensitivity.py  test_aesa_ryberg_scaffold.py  test_aesa_sessions.py  test_aesa_single_product.py  test_aesa_sr_export.py  test_api_no_store.py  test_archetype_lca_extended.py  test_archetype_lca_stage_breakdown.py  test_archetype_trajectory.py  test_bom_validator.py  test_cancellation.py  test_cohort_row_colors.py  test_contribution_analysis.py  test_contribution_multi_year.py  test_contribution_prospective.py  test_dependency_rules_import.py  test_dsm_manual_mode.py  (+38 more)
mapper-frontend/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
mapper-tauri/: Cargo.toml  Info.plist  README.md  build.rs  tauri.conf.json
mapper-tauri/capabilities/: default.json
mapper-tauri/icons/: icon.icns
mapper-tauri/src/: main.rs
scripts/: add_license_headers.py  check_license_headers.py
(+373 files in other folders)
